Jinduo: port net/event_loop_test.cc

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -34,5 +34,6 @@ compilation_database(
         "//one/jinduo/base",
         "//one/jinduo/net",
         "//one/jinduo/net:channel_test",
+        "//one/jinduo/net:event_loop_test",
     ],
 )
