--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -20,6 +20,7 @@ load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
 cc_library(
     name = "net",
     srcs = [
+        "buffer.cc",
         "event_loop.cc",
         "inet_address.cc",
         "internal/channel.cc",
@@ -41,6 +42,7 @@ cc_library(
         "internal/timer_queue.h",
     ],
     hdrs = [
+        "buffer.h",
         "callbacks.h",
         "event_loop.h",
         "inet_address.h",
@@ -56,6 +58,7 @@ cc_library(
         "//one/base",
         "//one/jinduo/base",
         "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/base",
         "@com_google_absl//absl/functional:bind_front",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
@@ -92,6 +95,22 @@ cc_binary(
     deps = [
         ":net",
         "@com_google_absl//absl/time",
+    ],
+)
+
+cc_test(
+    name = "buffer_test",
+    srcs = ["buffer_test.cc"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    visibility = ["//bazel:__pkg__"],
+    deps = [
+        ":net",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
     ],
 )
 
