--- a/one/jinduo/base/BUILD.bazel
+++ b/one/jinduo/base/BUILD.bazel
@@ -40,3 +40,42 @@ cc_library(
         "@com_google_absl//absl/base",
     ],
 )
+
+cc_library(
+    name = "thread",
+    srcs = [
+        "thread.cc",
+    ],
+    hdrs = [
+        "thread.h",
+    ],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    visibility = [
+        "//bazel:__pkg__",
+        "//one/jinduo:__subpackages__",
+    ],
+    deps = [
+        ":base",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/base",
+        "@com_google_absl//absl/synchronization",
+    ],
+)
+
+cc_test(
+    name = "thread_test",
+    srcs = ["thread_test.cc"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    deps = [
+        ":thread",
+        "@com_google_absl//absl/functional:bind_front",
+    ],
+)
