--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -150,3 +150,23 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+cc_test(
+    name = "timer_queue_test",
+    srcs = ["internal/timer_queue_test.cc"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    tags = ["broken"],
+    visibility = ["//bazel:__pkg__"],
+    deps = [
+        ":net",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/time",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
