--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -28,6 +28,8 @@ cc_library(
         "internal/acceptor.h",
         "internal/channel.cc",
         "internal/channel.h",
+        "internal/event_loop_thread_pool.cc",
+        "internal/event_loop_thread_pool.h",
         "internal/poller.cc",
         "internal/poller.h",
         "internal/poller/default_poller.cc",
@@ -65,6 +67,7 @@ cc_library(
         "//one/jinduo/base",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
+        "@com_google_absl//absl/container:fixed_array",
         "@com_google_absl//absl/functional:bind_front",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
