Jinduo: port tcp_client.h

--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -47,6 +47,7 @@ cc_library(
         "internal/timer.h",
         "internal/timer_queue.cc",
         "internal/timer_queue.h",
+        "tcp_client.cc",
         "tcp_connection.cc",
         "tcp_server.cc",
     ],
@@ -56,6 +57,7 @@ cc_library(
         "event_loop.h",
         "event_loop_thread.h",
         "inet_address.h",
+        "tcp_client.h",
         "tcp_connection.h",
         "tcp_server.h",
         "timer_id.h",
