Jinduo: port integration_test/echo_client.cc

--- a/one/jinduo/integration_tests/BUILD.bazel
+++ b/one/jinduo/integration_tests/BUILD.bazel
@@ -33,3 +33,21 @@ cc_binary(
         "@com_google_absl//absl/time",
     ],
 )
+
+cc_binary(
+    name = "echo_client",
+    srcs = ["echo_client.cc"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    deps = [
+        "//one/jinduo/net",
+        "@com_github_gflags_gflags//:gflags",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/base",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/time",
+    ],
+)
