--- a/one/jinduo/net/http/BUILD.bazel
+++ b/one/jinduo/net/http/BUILD.bazel
@@ -15,16 +15,20 @@
 # You should have received a copy of the GNU General Public License along with
 # ONE. If not, see <https://www.gnu.org/licenses/>.
 
-load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
 
 cc_library(
     name = "http",
     srcs = [
         "http_context.cc",
         "http_context.h",
+        "http_response.cc",
+        "http_server.cc",
     ],
     hdrs = [
         "http_request.h",
+        "http_response.h",
+        "http_server.h",
     ],
     copts = [
         "-Wall",
@@ -56,5 +60,22 @@ cc_test(
         "@com_github_google_glog//:glog",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_binary(
+    name = "http_server_test",
+    srcs = [
+        "http_server_test.cc",
+    ],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    deps = [
+        ":http",
+        "@com_github_gflags_gflags//:gflags",
+        "@com_github_google_glog//:glog",
     ],
 )
