--- a/.bazelrc
+++ b/.bazelrc
@@ -105,16 +105,16 @@ build:sanitizer --build_tag_filters=-no_san
 build:sanitizer --test_tag_filters=-no_san
 
 # Basic ASAN/UBSAN that works for gcc
-build:asan --action_env=ENVOY_ASAN=1
+build:asan --action_env=ONE_ASAN=1
 build:asan --config=sanitizer
 # ASAN install its signal handler, disable ours so the stacktrace will be printed by ASAN
 build:asan --define signal_trace=disabled
-build:asan --define ENVOY_CONFIG_ASAN=1
+build:asan --define ONE_CONFIG_ASAN=1
 build:asan --copt -fsanitize=address,undefined
 build:asan --linkopt -fsanitize=address,undefined
 # vptr and function sanitizer are enabled in clang-asan if it is set up via bazel/setup_clang.sh.
-build:asan --copt -fno-sanitize=vptr,function
-build:asan --linkopt -fno-sanitize=vptr,function
+build:asan --copt -fno-sanitize=vptr
+build:asan --linkopt -fno-sanitize=vptr
 build:asan --copt -DADDRESS_SANITIZER=1
 build:asan --copt -DUNDEFINED_SANITIZER=1
 build:asan --copt -D__SANITIZE_ADDRESS__
@@ -133,9 +133,9 @@ build:clang-asan --linkopt --rtlib=compiler-rt
 build:clang-asan --linkopt --unwindlib=libgcc
 
 # Clang TSAN
-build:clang-tsan --action_env=ENVOY_TSAN=1
+build:clang-tsan --action_env=ONE_TSAN=1
 build:clang-tsan --config=sanitizer
-build:clang-tsan --define ENVOY_CONFIG_TSAN=1
+build:clang-tsan --define ONE_CONFIG_TSAN=1
 build:clang-tsan --copt -fsanitize=thread
 build:clang-tsan --linkopt -fsanitize=thread
 build:clang-tsan --linkopt -fuse-ld=lld
@@ -151,9 +151,9 @@ build:clang-tsan --test_env="TSAN_OPTIONS=report_atomic_races=0"
 # Clang MSAN - this is the base config for remote-msan and docker-msan. To run this config without
 # our build image, follow https://github.com/google/sanitizers/wiki/MemorySanitizerLibcxxHowTo
 # with libc++ instruction and provide corresponding `--copt` and `--linkopt` as well.
-build:clang-msan --action_env=ENVOY_MSAN=1
+build:clang-msan --action_env=ONE_MSAN=1
 build:clang-msan --config=sanitizer
-build:clang-msan --define ENVOY_CONFIG_MSAN=1
+build:clang-msan --define ONE_CONFIG_MSAN=1
 build:clang-msan --copt -fsanitize=memory
 build:clang-msan --linkopt -fsanitize=memory
 build:clang-msan --linkopt -fuse-ld=lld
