Codelab: kafka_message_parser use jinduo

--- a/one/codelab/kafka_message_parser/BUILD.bazel
+++ b/one/codelab/kafka_message_parser/BUILD.bazel
@@ -29,12 +29,11 @@ cc_binary(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_chenshuo_muduo//muduo/base",
-        "@com_github_chenshuo_muduo//muduo/net",
-        "@com_github_chenshuo_muduo//muduo/net/http",
-        "@com_github_chenshuo_muduo//muduo/net/inspect",
+        "//one/jinduo/net",
+        "//one/jinduo/net/http",
         "@com_github_gflags_gflags//:gflags",
         "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/base",
     ],
 )
 
