--- a/one/codelab/minikafka/BUILD.bazel
+++ b/one/codelab/minikafka/BUILD.bazel
@@ -50,19 +50,36 @@ cc_library(
 
 cc_library(
     name = "kafka_binary_reader",
-    hdrs = [
-        "kafka_binary_reader.h",
-    ],
+    srcs = ["kafka_binary_reader.cc"],
+    hdrs = ["kafka_binary_reader.h"],
     copts = [
         "-Wall",
         "-Wextra",
         "-Werror",
     ],
     deps = [
+        "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/types:span",
+    ],
+)
+
+cc_test(
+    name = "kafka_binary_reader_test",
+    srcs = ["kafka_binary_reader_test.cc"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    deps = [
+        ":kafka_binary_reader",
+        "@com_google_absl//absl/base",
+        "@com_google_absl//absl/types:span",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
     ],
 )
 
