--- a/one/codelab/minikafka/BUILD.bazel
+++ b/one/codelab/minikafka/BUILD.bazel
@@ -25,7 +25,7 @@ cc_binary(
     copts = [
         "-Wall",
         "-Wextra",
-        # "-Werror",
+        "-Werror",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -45,6 +45,29 @@ cc_library(
     deps = [
         "@com_google_absl//absl/status:statusor",
         "@com_google_absl//absl/strings",
+    ],
+)
+
+cc_library(
+    name = "api_versions_request",
+    srcs = [
+        "api_versions_request_data.cc",
+    ],
+    hdrs = [
+        "api_versions_request.h",
+        "api_versions_request_data.h",
+    ],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":api_key",
+        ":kafka_binary_reader",
+        "//one/base:macros",
+        "@com_google_absl//absl/status",
     ],
 )
 
@@ -77,6 +100,7 @@ cc_test(
     deps = [
         ":kafka_binary_reader",
         "@com_google_absl//absl/base",
+        "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/types:span",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
@@ -99,7 +123,10 @@ cc_library(
         "-Werror",
     ],
     deps = [
+        ":api_versions_request",
+        ":kafka_binary_reader",
         ":request_header",
+        "//one/base:macros",
         "//one/jinduo/net",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
@@ -125,7 +152,7 @@ cc_library(
     copts = [
         "-Wall",
         "-Wextra",
-        # "-Werror",
+        "-Werror",
     ],
     visibility = ["//visibility:public"],
     deps = [
