Codelab: minikafka binary reader read varint return status

--- a/one/codelab/minikafka/BUILD.bazel
+++ b/one/codelab/minikafka/BUILD.bazel
@@ -83,7 +83,9 @@ cc_library(
     deps = [
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
+        "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
         "@com_google_absl//absl/strings:str_format",
         "@com_google_absl//absl/types:span",
     ],
@@ -99,6 +101,7 @@ cc_test(
     ],
     deps = [
         ":kafka_binary_reader",
+        "//one/test:macros",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/types:span",
