--- a/one/codelab/minikafka/BUILD.bazel
+++ b/one/codelab/minikafka/BUILD.bazel
@@ -81,6 +81,7 @@ cc_library(
         "-Werror",
     ],
     deps = [
+        "//one/base:macros",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/base:core_headers",
