--- a/one/codelab/minikafka/core/BUILD.bazel
+++ b/one/codelab/minikafka/core/BUILD.bazel
@@ -15,24 +15,23 @@
 # You should have received a copy of the GNU General Public License along with
 # ONE. If not, see <https://www.gnu.org/licenses/>.
 
-load("@rules_cc//cc:defs.bzl", "cc_binary")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 
-cc_binary(
-    name = "minikafka_server",
+cc_library(
+    name = "kafka_service",
     srcs = [
-        "main.cc",
+        "kafka_service.cc",
+    ],
+    hdrs = [
+        "kafka_service.h",
     ],
     copts = [
         "-Wall",
         "-Wextra",
         "-Werror",
     ],
+    visibility = ["//one/codelab/minikafka:__subpackages__"],
     deps = [
-        "//one/codelab/minikafka/core:kafka_service",
-        "//one/codelab/minikafka/transport:kafka_tcp_server",
-        "//one/jinduo/net",
-        "//one/jinduo/net/http",
-        "@com_github_gflags_gflags//:gflags",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
     ],
