--- a/one/base/container/BUILD.bazel
+++ b/one/base/container/BUILD.bazel
@@ -45,6 +45,19 @@ cc_library(
     hdrs = ["fixed_ring_buffer.h"],
     visibility = ["//visibility:public"],
     deps = [
+        "@com_github_google_glog//:glog",
         # "@com_google_absl//absl/container:fixed_array",
+    ],
+)
+
+cc_test(
+    name = "fixed_ring_buffer_test",
+    srcs = [
+        "fixed_ring_buffer_test.cc",
+    ],
+    deps = [
+        ":fixed_ring_buffer",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
     ],
 )
