--- a/one/base/container/BUILD.bazel
+++ b/one/base/container/BUILD.bazel
@@ -51,7 +51,7 @@ cc_library(
     hdrs = ["fixed_ring_buffer.h"],
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_google_glog//:glog",
+        "//one/base:macros",
     ],
 )
 
