--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,8 +14,6 @@ jobs:
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Install GCC 10
-        run: sudo apt install gcc-10 g++-10
       - name: Install LLVM 13
         run: |
           wget https://apt.llvm.org/llvm.sh
@@ -40,4 +38,4 @@ jobs:
       - run: echo "build --repository_cache=$HOME/.cache/bazel/repository_cache" >> .bazelrc
       - run: tools/setup_clang.sh /usr/lib/llvm-13
       - run: bazel build -c opt --config libc++ //...
-      - run: env CC=gcc-10 CXX=g++-10 bazel test -c opt --config asan //...
+      - run: bazel test -c opt --config clang-asan //...
