--- a/one/jinduo/net/http/BUILD.bazel
+++ b/one/jinduo/net/http/BUILD.bazel
@@ -45,6 +45,7 @@ cc_library(
 
 cc_test(
     name = "http_request_test",
+    size = "small",
     srcs = [
         "http_context.h",
         "http_request_test.cc",
