Chore: fix libressl compiler warnings

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -259,7 +259,7 @@ http_archive(
     name = "com_github_libevent_libevent",  # 2020-07-05T13:33:03Z
     build_file = "//bazel/third_party/event:event.BUILD",
     patch_cmds = [
-        "sed -i '43s/$/ \\&\\& LIBRESSL_VERSION_NUMBER < 0x3050000fL/' openssl-compat.h"
+        "sed -i '43s/$/ \\&\\& LIBRESSL_VERSION_NUMBER < 0x3050000fL/' openssl-compat.h",
     ],
     sha256 = "92e6de1be9ec176428fd2367677e61ceffc2ee1cb119035037a27d346b0403bb",
     strip_prefix = "libevent-2.1.12-stable",
@@ -330,6 +330,10 @@ Set-Content protobuf.bzl -Value $content -Encoding UTF8
 http_archive(
     name = "openssl",
     build_file = "//bazel/third_party/libressl:libressl.BUILD",
+    patch_args = ["-p1"],
+    patches = [
+        "//bazel/third_party/libressl:0001-fix-attribute-directive-ignored-warning.patch",
+    ],
     sha256 = "a7d0026f67622275ec8f8239ded422a653d5ccc84df55dea2acd406017185608",
     strip_prefix = "libressl-3.5.1",
     urls = [
