--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -73,8 +73,8 @@ cc_library(
         "//one/jinduo/base",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
-        "@com_google_absl//absl/container:fixed_array",
         "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
     ],
