--- a/one/codelab/jinduo_http/BUILD.bazel
+++ b/one/codelab/jinduo_http/BUILD.bazel
@@ -31,5 +31,9 @@ cc_binary(
     deps = [
         "//one/jinduo/net",
         "//one/jinduo/net/http",
+        "@com_github_gflags_gflags//:gflags",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/time",
     ],
 )
