--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -46,6 +46,7 @@ cc_library(
         "internal/timer.h",
         "internal/timer_queue.cc",
         "internal/timer_queue.h",
+        "signal_handler_manager.cc",
         "tcp_client.cc",
         "tcp_connection.cc",
         "tcp_server.cc",
@@ -57,6 +58,7 @@ cc_library(
         "event_loop_thread.h",
         "event_loop_thread_pool.h",
         "inet_address.h",
+        "signal_handler_manager.h",
         "tcp_client.h",
         "tcp_connection.h",
         "tcp_server.h",
