--- a/one/codelab/minikafka/BUILD.bazel
+++ b/one/codelab/minikafka/BUILD.bazel
@@ -35,5 +35,6 @@ cc_binary(
         "@com_github_gflags_gflags//:gflags",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
+        "@com_google_absl//absl/functional:bind_front",
     ],
 )
