Feature: minikafka add response header & binary writer

--- a/one/codelab/minikafka/base/BUILD.bazel
+++ b/one/codelab/minikafka/base/BUILD.bazel
@@ -58,3 +58,23 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+cc_library(
+    name = "kafka_binary_writer",
+    hdrs = ["kafka_binary_reader.h"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    visibility = ["//one/codelab/minikafka:__subpackages__"],
+    deps = [
+        "//one/base:macros",
+        "@com_google_absl//absl/base",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/types:span",
+    ],
+)
