--- a/one/codelab/minikafka/transport/BUILD.bazel
+++ b/one/codelab/minikafka/transport/BUILD.bazel
@@ -38,7 +38,9 @@ cc_library(
         "//one/codelab/minikafka/base:kafka_binary_reader",
         "//one/codelab/minikafka/core:kafka_service",
         "//one/codelab/minikafka/protocol:api_versions_request",
+        "//one/codelab/minikafka/protocol:api_versions_response",
         "//one/codelab/minikafka/protocol:request_header",
+        "//one/codelab/minikafka/protocol:response_header",
         "//one/jinduo/net",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base",
