Improvement: test use AssertStatusOk() instead of macro

--- a/one/codelab/minikafka/base/BUILD.bazel
+++ b/one/codelab/minikafka/base/BUILD.bazel
@@ -50,7 +50,7 @@ cc_test(
     ],
     deps = [
         ":kafka_binary_reader",
-        "//one/test:macros",
+        "//one/test:status",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/types:span",
