--- a/one/base/byte/BUILD.bazel
+++ b/one/base/byte/BUILD.bazel
@@ -47,3 +47,34 @@ cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+cc_library(
+    name = "binary_writer",
+    hdrs = ["binary_writer.h"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//one/base:macros",
+        "//one/base/container:span",
+        "@com_google_absl//absl/base",
+    ],
+)
+
+cc_test(
+    name = "binary_writer_test",
+    size = "small",
+    srcs = ["binary_writer_test.cc"],
+    copts = [
+        "-Wall",
+        "-Wextra",
+        "-Werror",
+    ],
+    deps = [
+        ":binary_reader",
+        ":binary_writer",
+        "//one/base:macros",
+        "//one/base/container:span",
+        "//one/test:status",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
